src/app/candidate-dashboard/adani-module/adani-profile/joining-education/joining-education.component.scss
@import "../../../../themes/themes.scss";
.joining-personal-wrapper {
    width: 100%;
    .grids-wrapper {
        display: inline-block;
        width: 100%;
        .input-1 {
            position: relative;
            border: solid 0.8px #bebebe;
            border-radius: 2px;
            color: #6b6b6b;
            outline: none;
            box-sizing: border-box;
            min-height: 30px !important;
            max-height: 30px !important;
            line-height: 30px;
            padding: 4px 8px;
            background-color: $white;
            width: 100%;
        }
        .input-1:focus,
        .input-1:hover {
            border: 1px solid $primary-hover-color;
        }
        .educatonForm {
            width: 99%;
            padding-right: 1em;
            font-size: 14px;
            position: relative;
            .row-wrapper {
                margin-top: 0.5em;
                width: 100%;
                display: flex;
                flex-wrap: wrap;
                justify-content: space-between;
                align-items: flex-start;
                .width-70 {
                    width: 70%;
                }
                .width-85 {
                    width: 85%;
                }
                .width-45 {
                    width: 45%;
                }
                .width-15 {
                    width: 15%;
                }
                .width-30 {
                    width: 30%;
                }
                .width-32 {
                    width: 32%;
                }
                .width-24 {
                    width: 24%;
                }
                .width-80 {
                    width: 80%;
                }
                .width-100 {
                    width: 100%;
                }
                .overall-input-wrapper {
                    display: flex;
                    flex-direction: column;
                    position: relative;
                    margin-top: .5em;
                    margin-right: 1em;
                    flex-grow: .5;
                    label {
                        color: #565656;
                        padding: 0 0 2px 0;
                        margin: 0;
                        font-size: 13px;
                    }
                    .input {
                        position: relative;
                        border: solid 0.8px #bebebe;
                        border-radius: 2px;
                        color: #6b6b6b;
                        outline: none;
                        box-sizing: border-box;
                        min-height: 35px !important;
                        max-height: 35px !important;
                        line-height: 35px;
                        padding: 4px 8px;
                        background-color: $white;
                        width: 100%;
                    }
                    .select {
                        display: flex;
                        align-items: center;
                        padding: 0px !important;
                        border: none !important;
                    }
                    .input:focus,
                    .input:hover {
                        border: 1px solid $primary-hover-color;
                    }
                    .form-error {
                        color: $primary-error-text;
                        font-size: 12px;
                    }
                     ::placeholder {
                        color: #a5a5a5 !important;
                        opacity: 1;
                        font-size: 13px;
                    }
                }
            }
            .container-wrapper {
                background-color: #f5f5f5;
                padding: 0em 0em 1em 1em;
                border-radius: 5px;
                margin-top: 1em;
            }
            .container-wrapper:first-child {
                background-color: #f5f5f5;
                padding: 0em 0em 1em 1em;
                border-radius: 5px;
                margin-top: 0em;
            }
            .form-grouping {
                width: 80%;
            }
            .remove-wrapper {
                width: 20%;
                position: relative;
                .remove {
                    position: absolute;
                    cursor: pointer;
                    left: 50%;
                    top: 20%;
                    height: 24px;
                    transform: translate(-50%, -20%);
                    i {
                        color: $primary-text-color;
                    }
                    i:hover {
                        color: white;
                        background-color: $primary-hover-color;
                        border-radius: 50%;
                    }
                }
            }
        }
        .photo-wrapper {
            width: 1%;
            height: 100%;
            position: relative;
        }
    }
    .footer {
        .left-arrow {
            border: solid #a5a5a5 !important;
            border-width: 0 1px 1px 0 !important;
            display: inline-block !important;
            padding: 8px !important;
            transform: rotate(135deg) !important;
            -webkit-transform: rotate(135deg) !important;
            margin-top: 1px !important;
            height: 7px !important;
            left: 0;
        }
        .right-arrow {
            border: solid #a5a5a5 !important;
            border-width: 0 1px 1px 0 !important;
            display: inline-block !important;
            padding: 8px !important;
            transform: rotate(-45deg) !important;
            -webkit-transform: rotate(-45deg) !important;
            margin-top: 1px !important;
            height: 7px !important;
            right: 0;
        }
        .sections {
            .label {
                color: #a5a5a5;
                font-size: 12px;
            }
            .value {
                font-size: 14px;
                color: #000;
                font-weight: 400;
            }
        }
        .left-space {
            margin-left: 16px;
        }
        .right-space {
            margin-right: 16px;
        }
    }
}

// Common nz-select wrapper
:host ::ng-deep .mat-autocomplete-panel {
    border: 1px solid #bebebe !important;
}

:host ::ng-deep .mat-option {
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    display: block !important;
    font-size: 14px !important;
    line-height: 40px !important;
    height: 40px !important;
    padding: 0 16px !important;
    text-align: left !important;
    text-decoration: none !important;
    max-width: 100% !important;
    position: relative !important;
    cursor: pointer !important;
    outline: 0 !important;
    display: flex !important;
    flex-direction: row !important;
    max-width: 100% !important;
    box-sizing: border-box !important;
    align-items: center !important;
    -webkit-tap-highlight-color: transparent !important;
}

// Ant select drop down css
:host ::ng-deep .ant-select-selection {
    border: solid 0.8px #bebebe;
    height: 35px !important;
    padding: 4px 8px;
    border-radius: 0px !important;
}

:host ::ng-deep .ant-select-selection:hover,
:host ::ng-deep .ant-select-selection:focus,
:host ::ng-deep .ant-select-selection:active {
    border: solid $primary-hover-color 1px !important;
    border-radius: 0px !important;
    z-index: 0 !important;
    box-shadow: none !important;
}

:host ::ng-deep input.ng-invalid.ng-touched,
.custom-input-error-border,
:host ::ng-deep nz-select.ng-invalid.ng-touched {
    border: solid $primary-error-text 1px !important;
    .ant-select-selection {
        border: solid $primary-error-text 1px !important;
    }
}

:host ::ng-deep .ant-select-selection__placeholder,
:host ::ng-deep .ant-select-search__field__placeholder {
    color: #a5a5a5 !important;
    opacity: 0.6 !important;
    font-size: 13px !important;
}

:host ::ng-deep .ant-select-selection__rendered {
    position: relative;
    display: block;
    margin-right: 0 !important;
    margin-left: 0 !important;
    line-height: 35px !important;
}

:host ::ng-deep .ant-select-arrow {
    right: 0 !important;
    padding: 0 8px !important;
}

:host ::ng-deep .ant-select-selection__clear {
    right: 18px !important;
    margin-top: -7px !important;
}

:host ::ng-deep .anticon.ant-select-arrow-icon::after {
    display: inline-block;
    margin-left: 0.255em;
    vertical-align: 0.255em;
    content: "";
    margin-top: 0.25em;
    border-top: 0.5em solid;
    border-right: 0.4em solid transparent;
    border-bottom: 0;
    border-left: 0.4em solid transparent;
    color: #666666;
    opacity: 0.9;
    border: solid #a5a5a5 !important;
    border-width: 0 1px 1px 0 !important;
    display: inline-block !important;
    padding: 3px !important;
    transform: rotate(45deg) !important;
    -webkit-transform: rotate(45deg) !important;
    margin-top: 1px !important;
}

::ng-deep .ant-select-dropdown-menu-item:first-child,
::ng-deep .ant-select-dropdown-menu-item:last-child {
    border: none !important;
    border-radius: 0px !important;
}

::ng-deep .ant-select-dropdown-menu-item:hover:not(.ant-select-dropdown-menu-item-disabled) {
    background-color: #eaeaea !important;
}

::ng-deep .ant-select-dropdown-menu-item-active:not(.ant-select-dropdown-menu-item-disabled) {
    background-color: rgb(211, 211, 211, 0.7) !important;
}

:host ::ng-deep .ant-select-dropdown {
    border: 1px solid #bebebe !important;
}

:host ::ng-deep .ant-select-selection-selected-value {
    padding-right: 16px !important;
}

// Ant Select dropdown css close
// Date picker start
:host ::ng-deep mat-datepicker-toggle {
    position: absolute !important;
    right: 0 !important;
    box-sizing: border-box !important;
    border-left: 1px solid #a5a5a5;
    min-height: 34px !important;
    max-height: 34px !important;
}

:host ::ng-deep .mat-datepicker-toggle-default-icon {
    color: #a5a5a5 !important;
}

:host ::ng-deep .mat-icon-button .mat-button-base {
    min-height: 35px !important;
    max-height: 35px !important;
}

// Date picker end
//mat-checkbox start
:host ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
    background: $primary-color !important;
}

.date-relative {
    position: relative;
    margin: 0 !important;
    padding: 0 !important;
}

:host ::ng-deep .mat-input-element:disabled {
    background: #EEEEEE !important;
    color: rgba(0, 0, 0, 0.5) !important;
    cursor: not-allowed;
}

.ant-select-disabled {
    color: rgba(0, 0, 0, 0.5) !important;
}

.input-1:disabled {
    background: #EEEEEE !important;
    cursor: not-allowed;
}

.selectedPost {
    min-width: 400px;
}

.primary-clr {
    color: $primary-text-color;
}

